--- a/src/common/post-links/post-link.scss
+++ b/src/common/post-links/post-link.scss
@@ -33,7 +33,7 @@
         .description{
             padding-top: 5px;
             font-size: 1.3vw;
-            color: $darkslategrey;
+            color: $dark;
             // animation: fadeIn 2.5s ease normal;
     
         }
@@ -46,12 +46,12 @@
             .info{
                 margin: 0.3vw;
                 font-size: 1vw;
-                color: $gray;
+                color: $darker;
             }
             .divider{
                 width: 2px;
                 height: 1vw;
-                background-color: $lightgray;
+                background-color: $mid-light;
             }
         }
     }
