--- a/src/pages/404/404.njk
+++ b/src/pages/404/404.njk
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="404.css">
+    <title>{{title}}</title>
   </head>
   <body>
     {% include "common/header/header.njk" %}
