--- a/src/pages/home/home.njk
+++ b/src/pages/home/home.njk
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <title>Kevin Oliveira</title>
   </head>
   <body>
     {% include "common/header/header.njk" %}
