working listing posts on home

--- a/src/common/post-links/post-links.njk
+++ b/src/common/post-links/post-links.njk
@@ -1,139 +1,25 @@
 <div class="homeposts">
 
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dictum risus, sed placerat lectus. Donec vel pharetra arcu. Nunc imperdiet, massa eu finibus condimentum, erat leo faucibus dolor, eget tempor lorem nunc vitae purus. Vestibulum quis dui nec felis blandit vestibulum. Donec a turpis non lectus interdum pharetra id vitae nulla. Pellentesque facilisis dapibus dui, eget semper libero pulvinar ullamcorper. Nullam quis ex risus. Nulla sed libero nulla. Nullam hendrerit aliquet urna, in maximus magna molestie sit amet. Pellentesque pulvinar odio sit amet nunc placerat malesuada. </div>
-        <div class="subInfo">
-            <div class="info">06/12/2002</div>
-            <div class="divider"></div>
-            <div class="info">12 minute read</div>
-        </div>
-    </div>
+{% for post in posts %}
 
+  {% if loop.index0 == 0 %}
+
+  {% else %}
+  <a class="link" href={{post.link}}>
+    <div class="post">
+        <div class="postTitle">{{post.title}}</div>
+        <div class="description">{{post.description}} </div>
+        <div class="subInfo">
+            <div class="info">{{post.date}}</div>
+            <div class="divider"></div>
+            <div class="info">12 minute read</div>
+        </div>
+      </div>
+    </a>
+  {% endif %}
+{% endfor %}
+
+  
+
+    
 </div>
