--- a/src/common/home-banner/home-banner.njk
+++ b/src/common/home-banner/home-banner.njk
@@ -1,13 +1,13 @@
-<a class="bannerLink" href="/linkToPost.html">
+<a class="bannerLink" href={{posts[0].link}}>
     <div class="banner">
         <div class="bannerArt">
             <div class="artWrapper"></div>
         </div>
         <div class="post">
-            <div class="postTitle">Extensive list of mental models</div>
-            <div class="description">loas  sdlkajdklaj dklajd kl ajdskl asdkl aksdj klasajdkdj kjkajdjdkjskdasj ksjajdjdkljdjkasj lkadajdj d sd asjdkas dkl ask</div>
+            <div class="postTitle">{{posts[0].title}}</div>
+            <div class="description">{{posts[0].description}}</div>
             <div class="subInfo">
-                <div class="info">06/12/2002</div>
+                <div class="info">{{posts[0].date}}</div>
                 <div class="divider"></div>
                 <div class="info">12 minute read</div>
             </div>
