--- a/src/common/post-links/post-link.scss
+++ b/src/common/post-links/post-link.scss
@@ -6,7 +6,10 @@
     padding: 0px 10vw;
     
 
-    .post{
+    .link {
+        all: unset;
+
+        .post{
         display: flex;
         align-items: flex-start;
         justify-content: center;
@@ -55,5 +58,8 @@
             }
         }
     }
+    }
+
+    
 
 }
